Lê Cường Quốc - fix xong lỗi load trang

--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -101,7 +101,7 @@
     }
 
 
-    document.addEventListener("DOMContentLoaded", fetchAllUsers);
+    document.addEventListener("DOMContentLoaded", fetchAllUsers());
     function generateMaNV() {
         const prefix = "NV";
         const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
