TruongHoangPhuocVinh update report page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
                         </ul>
                     </div>
                 </li>
-                
+                <li class="nav-item nav-report"><a href="report.html" class="nav-link"><i class="fa-solid fa-file-invoice"></i> Report</a></li>
                 <li class="nav-item nav-goods"><a href="goods.html" class="nav-link"><i class="fa-solid fa-box" ></i> Goods</a></li>
                 <li class="nav-item nav-order"><a href="order.html" class="nav-link"><i class="fa-solid fa-clipboard-list" ></i> Order</a></li>
                 <li class="nav-item nav-staff"><a href="staff.html" class="nav-link"><i class="fa-solid fa-user" ></i> Staff</a></li>
