LeCuongQuoc update product API

--- a/src/main/resources/templates/mission.html
+++ b/src/main/resources/templates/mission.html
@@ -1,27 +1,27 @@
 <div class="admin-container">
     <div class="nav-btns">
-        <button onclick="showSection('daily-tasks')" data-section="mission" class="active">Mission </button> </div>
+        <button onclick="showSection('daily-tasks')" data-section="mission" class="active">Product </button> </div>
     <div id="daily-tasks" class="section active">
-        <button class="btn btn-add-item" data-form-id="addMissionForm">➕ Thêm nhiệm vụ</button>
+        <button class="btn btn-add-item" data-form-id="addMissionForm">➕ Add Product</button>
         
         <div id="addMissionForm" class="add-form-container">
-            <h3>Thêm nhiệm vụ mới</h3>
+            <h3>New Product</h3>
             <button class="btn btn-close-form">✖️ Hủy</button> 
             <div class="form-grid">
                 <div class="form-group">
-                    <label for="missionName">Tên nhiệm vụ</label>
-                    <input type="text" id="missionName" placeholder="Nhập tên nhiệm vụ" class="form-control-custom">
+                    <label for="missionName">ProDuct Name</label>
+                    <input type="text" id="missionName" placeholder="nhập tên sản phẩm" class="form-control-custom">
                 </div>
                 <div class="form-group">
-                    <label for="missionAssignee">Người thực hiện</label>
-                    <input type="text" id="missionAssignee" placeholder="Người được giao" class="form-control-custom">
+                    <label for="missionAssignee">Price</label>
+                    <input type="number" id="missionAssignee" placeholder="Giá sản phẩm" class="form-control-custom">
                 </div>
                 <div class="form-group">
-                    <label for="missionDueDate">Ngày đến hạn</label>
-                    <input type="date" id="missionDueDate" class="form-control-custom">
+                    <label for="missionDueDate">Mô tả sản phẩm</label>
+                    <input type="text" id="missionDueDate" placeholder="Mô tả ngắn cho sản phẩm" class="form-control-custom">
                 </div>
                 <div class="form-group">
-                    <label for="missionPriority">Độ ưu tiên</label>
+                    <label for="missionPriority">Loại</label>
                     <select id="missionPriority" class="form-control-custom">
                         <option value="low">Thấp</option>
                         <option value="medium">Trung bình</option>
@@ -37,27 +37,32 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID</th><th>Tên vai trò</th><th>Quyền hạn</th><th>Số người dùng</th><th>Thao tác</th>
+                    <th>ID</th><th>Product name</th><th>price</th><th>mổ tả</th><th>Loại</th><th>Thao tác</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="Product-body">
                 <tr>
-                    <td>1</td><td>Admin</td><td>Toàn quyền</td><td>1</td>
-                    <td><button class="btn">Chỉnh sửa</button></td>
-                </tr>
-                <tr>
-                    <td>2</td><td>Quản lý cửa hàng</td><td>Quản lý cửa hàng, nhân viên, báo cáo</td><td>3</td>
-                    <td><button class="btn">Chỉnh sửa</button> <button class="btn">Xóa</button></td>
-                </tr>
-                <tr>
-                    <td>3</td><td>Quản lý kho</td><td>Quản lý kho, đơn hàng, nhập xuất</td><td>2</td>
-                    <td><button class="btn">Chỉnh sửa</button> <button class="btn">Xóa</button></td>
-                </tr>
-                <tr>
-                    <td>4</td><td>Thu ngân</td><td>Tạo đơn hàng, thanh toán</td><td>5</td>
+                    <td>2</td><td>cafe  sữa</td><td>20.000đ</td><td>Cà phê đắng thấy bà</td><td>Café</td>
                     <td><button class="btn">Chỉnh sửa</button> <button class="btn">Xóa</button></td>
                 </tr>
             </tbody>
         </table>
     </div>
 </div>
+
+<script>
+    product = []
+    function renderProductTable(data) {
+        const tbody = document.getElementById("Product-body");
+        tbody.innerHTML = data.map(u => `
+      <tr>
+            <td>${data.id}</td>
+            <td><input type="text" value="${u.name}" style="border: 0px;background: none;"></td>
+            <td><input type="text" value="${u.name}" style="border: 0px;background: none;">s</td>
+            <td>Cà phê đắng thấy bà</td>
+            <td>Café</td>
+            <td><button class="btn">Chỉnh sửa</button> <button class="btn">Xóa</button></td>
+        </tr>
+    `).join("");
+    }
+</script>
